--- a/pixi.toml
+++ b/pixi.toml
@@ -13,13 +13,17 @@ python = ">=3.12.1,<3.13"
 jupyter = ">=1.0.0,<1.1"
 pandas = ">=2.2.0,<2.3"
 pyarrow = ">=15.0.0,<15.1"
-pyprojroot = ">=0.3.0,<0.4"
-openpyxl = ">=3.1.2,<3.2"
-cartopy = ">=0.22.0,<0.23"
-# fiona = ">=1.9.5,<1.10"
-icecream = ">=2.1.3,<2.2"
+pyprojroot = ">=0.3.0,<0.4"    # for here
+openpyxl = ">=3.1.2,<3.2"      # for read_excel
+cartopy = ">=0.22.0,<0.23"     # for maps
+# fiona = ">=1.9.5,<1.10"      # to read shape metadata
+icecream = ">=2.1.3,<2.2"      # for debug
 geopandas = ">=0.14.3,<0.15"
-# folium = ">=0.15.1,<0.16"
+folium = ">=0.15.1,<0.16"      # leaflet
+Imageio = ">=2.34.0,<2.35"
+# plotnine = ">=0.12.4,<0.13"  # ggplot
+# prettymaps = ">=1.0.0,<1.1"
+# klib = ">=0.2.0,<0.3"        # data exploration lib
 
 [pypi-dependencies]
-datar = ">= 0.15.5,<0.16"
+datar = { version = ">=0.15.5,<0.16", extras = ["numpy", "pandas"] } # dplyr
