--- a/pixi.toml
+++ b/pixi.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add a short description here"
 authors = ["notPlancha <andre.plancha@hotmail.com>"]
 channels = ["conda-forge"]
-platforms = ["win-64"]
+platforms = ["win-64", "linux-64"]
 
 [tasks]
 
@@ -23,9 +23,9 @@ folium = ">=0.15.1,<0.16"      # leaflet
 Imageio = ">=2.34.0,<2.35"
 python-duckdb = ">=0.10.1,<0.11"
 python-dateutil = ">=2.9.0,<2.10"
-fuzzywuzzy = ">=0.18.0,<0.19"  # TODO REMOVE LATER
 thefuzz = ">=0.22.1,<0.23"
 unidecode = ">=1.3.8,<1.4"
+pixi-pycharm = ">=0.0.4,<0.1"
 # plotnine = ">=0.12.4,<0.13"  # ggplot
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
