--- a/pixi.toml
+++ b/pixi.toml
@@ -26,7 +26,7 @@ python-dateutil = ">=2.9.0,<2.10"
 thefuzz = ">=0.22.1,<0.23"
 unidecode = ">=1.3.8,<1.4"
 pixi-pycharm = ">=0.0.4,<0.1"
-# plotnine = ">=0.12.4,<0.13"  # ggplot
+plotnine = ">=0.13.4,<0.14"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
