--- a/pixi.toml
+++ b/pixi.toml
@@ -27,6 +27,7 @@ thefuzz = ">=0.22.1,<0.23"
 unidecode = ">=1.3.8,<1.4"
 pixi-pycharm = ">=0.0.4,<0.1"
 plotnine = ">=0.13.4,<0.14"
+python-jsonpath = ">=1.1.1,<1.2"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
