--- a/pixi.toml
+++ b/pixi.toml
@@ -27,7 +27,7 @@ thefuzz = ">=0.22.1,<0.23"
 unidecode = ">=1.3.8,<1.4"
 pixi-pycharm = ">=0.0.4,<0.1"
 plotnine = ">=0.13.4,<0.14"
-python-jsonpath = ">=1.1.1,<1.2"
+jsonpath-ng = ">=1.6.1,<1.7"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
@@ -35,3 +35,4 @@ python-jsonpath = ">=1.1.1,<1.2"
 datar = { version = ">=0.15.5,<0.16", extras = ["numpy", "pandas"] } # dplyr
 pyjanitor = ">=0.26.0, <0.27"
 duckdb-kernel = "*" # idk acho q n e preciso
+skimpy = "*"
