--- a/pixi.toml
+++ b/pixi.toml
@@ -28,6 +28,10 @@ unidecode = ">=1.3.8,<1.4"
 pixi-pycharm = ">=0.0.4,<0.1"
 plotnine = ">=0.13.4,<0.14"
 jsonpath-ng = ">=1.6.1,<1.7"
+pyogrio = ">=0.8.0,<0.9"
+orjson = ">=3.10.3,<3.11"
+tqdm = ">=4.66.4,<4.67"
+requests = ">=2.32.2,<2.33"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
