--- a/pixi.toml
+++ b/pixi.toml
@@ -28,10 +28,13 @@ unidecode = ">=1.3.8,<1.4"
 pixi-pycharm = ">=0.0.4,<0.1"
 plotnine = ">=0.13.4,<0.14"
 jsonpath-ng = ">=1.6.1,<1.7"
-pyogrio = ">=0.8.0,<0.9"
-orjson = ">=3.10.3,<3.11"
+pyogrio = ">=0.8.0,<0.9"       # geopandas helper
+orjson = ">=3.10.3,<3.11"      # json parser
 tqdm = ">=4.66.4,<4.67"
 requests = ">=2.32.2,<2.33"
+nltk_data = ">=2019.7.4,<2022.6"
+nltk = ">=3.8.1,<3.9"
+miceforest = ">=5.6.2,<5.7"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
@@ -40,3 +43,4 @@ datar = { version = ">=0.15.5,<0.16", extras = ["numpy", "pandas"] } # dplyr
 pyjanitor = ">=0.26.0, <0.27"
 duckdb-kernel = "*" # idk acho q n e preciso
 skimpy = "*"
+pca = "*"
