--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ name = "pfacd"
 version = "0.1.0"
 description = "Add a short description here"
 authors = ["notPlancha <andre.plancha@hotmail.com>"]
-channels = ["conda-forge"]
+channels = ["conda-forge", "pytorch"]
 platforms = ["win-64", "linux-64"]
 
 [tasks]
@@ -35,6 +35,9 @@ requests = ">=2.32.2,<2.33"
 nltk_data = ">=2019.7.4,<2022.6"
 nltk = ">=3.8.1,<3.9"
 miceforest = ">=5.6.2,<5.7"
+numpy = ">=1.26.4,<1.27"
+pytorch = ">=2.3.0,<2.4"
+cpuonly = ">=2.0,<3"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
@@ -45,4 +48,6 @@ duckdb-kernel = "*" # idk acho q n e preciso
 skimpy = "*"
 pca = "*"
 tensorflow = "*"
-eventdetector-ts = { git = "https://github.com/notPlancha/eventdetector.git" }
+eventdetector-ts = { git = "https://github.com/notPlancha/eventdetector.git" } # nao da pra usar contexto de evento
+tick = { url = "https://github.com/X-DataInitiative/tick/releases/download/v0.6/tick-0.6.0.0-cp36-cp36m-win_amd64.whl" } # n sei usar
+ttpp = { git = "https://github.com/shchur/triangular-tpp.git" } # n percebi outra vez
