--- a/pixi.toml
+++ b/pixi.toml
@@ -3,13 +3,12 @@ name = "pfacd"
 version = "0.1.0"
 description = "Add a short description here"
 authors = ["notPlancha <andre.plancha@hotmail.com>"]
-channels = ["conda-forge", "pytorch"]
+channels = ["conda-forge", "pytorch", "timeseriesai"]
 platforms = ["win-64", "linux-64"]
 
 [tasks]
 
 [dependencies]
-python = ">=3.12.1,<3.13"
 jupyter = ">=1.0.0,<1.1"
 pandas = ">=2.2.0,<2.3"
 pyarrow = ">=15.0.0,<15.1"
@@ -36,8 +35,9 @@ nltk_data = ">=2019.7.4,<2022.6"
 nltk = ">=3.8.1,<3.9"
 miceforest = ">=5.6.2,<5.7"
 numpy = ">=1.26.4,<1.27"
-pytorch = ">=2.3.0,<2.4"
-cpuonly = ">=2.0,<3"
+tsai = ">=0.3.9,<0.4"
+pmdarima = ">=2.0.4,<2.1"
+scikit-learn = "1.5.*"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
@@ -48,6 +48,7 @@ duckdb-kernel = "*" # idk acho q n e preciso
 skimpy = "*"
 pca = "*"
 tensorflow = "*"
-eventdetector-ts = { git = "https://github.com/notPlancha/eventdetector.git" } # nao da pra usar contexto de evento
-tick = { url = "https://github.com/X-DataInitiative/tick/releases/download/v0.6/tick-0.6.0.0-cp36-cp36m-win_amd64.whl" } # n sei usar
-ttpp = { git = "https://github.com/shchur/triangular-tpp.git" } # n percebi outra vez
+# tensorflow = "*"
+# eventdetector-ts = { git = "https://github.com/notPlancha/eventdetector.git" } # nao da pra usar contexto de evento
+# tick = { url = "https://github.com/X-DataInitiative/tick/releases/download/v0.6/tick-0.6.0.0-cp36-cp36m-win_amd64.whl" } # n sei usar
+# ttpp = { git = "https://github.com/shchur/triangular-tpp.git" } # n percebi outra vez
