--- a/pixi.toml
+++ b/pixi.toml
@@ -38,6 +38,9 @@ numpy = ">=1.26.4,<1.27"
 tsai = ">=0.3.9,<0.4"
 pmdarima = ">=2.0.4,<2.1"
 scikit-learn = "1.5.*"
+python-igraph = ">=0.11.5,<0.12"
+pycairo = ">=1.26.0,<1.27"
+cairocffi = ">=1.6.1,<1.7"
 # prettymaps = ">=1.0.0,<1.1"
 # klib = ">=0.2.0,<0.3"        # data exploration lib
 
